--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,10 @@
     "http://*"
   ],
   "version": "1",
-  "minimum_chrome_version": "9"
+  "minimum_chrome_version": "9",
+
+  // An options page for configuring the password/username
+  "options_page": "options.html"
   
   // TODO(rjkroege): icon here. Use a pinboard icon. The pinboard site's favicon
   // for example.
