--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,11 @@
 {
-  "background_page": "background.html",
+  "manifest_version": 2,
+  
+ "background": {
+    "scripts": ["eventPage.js"],
+    "persistent": false
+  },
+
   "description": "Post bookmarks from the Chrome omnibox",
   "name": "Pinboard post",
   "omnibox": { "keyword" : "+pin" },
