WIP: this CL is probably discardable

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   
  "background": {
-    "scripts": ["eventPage.js"],
+    "scripts": ["eventpage.js"],
     "persistent": false
   },
 
